judequinn.angularjs create-competition-app checkboxes, added additional js block to base.html

--- a/pgups/static/css/main.css
+++ b/pgups/static/css/main.css
@@ -211,6 +211,11 @@ select.ng-invalid.ng-dirty {
   float: left;
   margin-top: 16px;
 }
+/* Creation form */
+/*===============*/
+.creation-form {
+  padding: 30px 0;
+}
 @-moz-keyframes greenish {
   0% {
     background-color: rgba(128,255,128,0.6);
