--- a/pgups/templates/pgups/competition_create.html
+++ b/pgups/templates/pgups/competition_create.html
@@ -22,67 +22,121 @@
 
 			<div class="container">
 
-				<div class="heading">
-					<h2>Общая информация</h2>
-				</div>
-
-				<!-- Name -->
-				<div class="form-group">
-					<label class="col-lg-4 col-md-4 col-sm-5 col-xs-12 control-label text-left" for="name">Название соревнований:</label>
-					<div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
-						<input class="form-control" name="name" ng-model="data.name" type="text" required/>
-						<p class="error-block" ng-show="creationForm.name.$dirty && creationForm.name.$error.required">Введите название</p>
-					</div>
-				</div> <!-- End of Name -->
-
-				<!-- Type -->
-				<div class="form-group">
-					<label class="col-lg-4 col-md-4 col-sm-5 col-xs-12 control-label text-left" for="representative">Тип соревнований:</label>
-					<div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
-						<select class="form-control" name="type" ng-model="data.type" type="text" required/>
-							<option value="детские">детские</option>
-							<option value="взрослые">взрослые</option>
-						</select>
-						<p class="error-block" ng-show="creationForm.type.$dirty && requestForm.representative.$error.required">Выберите тип</p>
-					</div>
-				</div> <!-- End of Type -->
-
-				<!-- Start date -->
-				<div class="form-group">
-					<label class="col-lg-4 col-md-4 col-sm-5 col-xs-12 control-label text-left" for="name">Дата начала соревнований:</label>
-					<div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
-						<input class="form-control" name="date_start" ng-model="data.date_start" type="date" placeholder="2016-01-01" required/>
-						<p class="error-block" ng-show="creationForm.date_start.$dirty && creationForm.date_start.$error.required">Введите дату начала соревнований</p>
-						<p class="error-block" ng-show="creationForm.date_start.$dirty && creationForm.date_start.$error.date">Введите дату в формате 2016-01-01</p>
-					</div>
-				</div> <!-- End of Start date -->
-
-				<!-- Finish date -->
-				<div class="form-group">
-					<label class="col-lg-4 col-md-4 col-sm-5 col-xs-12 control-label text-left" for="name">Дата окончания соревнований:</label>
-					<div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
-						<input class="form-control" name="date_finish" ng-model="data.date_finish" type="date" placeholder="2016-01-01" required/>
-						<p class="error-block" ng-show="creationForm.date_finish.$dirty && creationForm.date_finish.$error.required">Введите дату окончания</p>
-						<p class="error-block" ng-show="creationForm.date_finish.$dirty && creationForm.date_finish.$error.date">Введите дату в формате 2016-01-01</p>
-					</div>
-				</div> <!-- End of Finish date -->
-
-
-				<div class="heading">
-					<h2>Отметьте нужные возрастные группы, стили и дистанции</h2>
-				</div>
-
-				<div class="heading">
-					<h2>Выберите туры</h2>
-				</div>
-
 				{$ data $}
 
-			</div>
+				<!-- Heading -->
+				<div class="heading">
+					<h2>Общая информация</h2>
+				</div> <!-- End of Heading -->
+
+				<div class="creation-form">
+
+					<!-- Name -->
+					<div class="form-group">
+						<label class="col-lg-4 col-md-4 col-sm-5 col-xs-12 control-label text-left" for="name">Название соревнований:</label>
+						<div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
+							<input class="form-control" name="name" ng-model="data.name" type="text" required/>
+							<p class="error-block" ng-show="creationForm.name.$dirty && creationForm.name.$error.required">Введите название</p>
+						</div>
+					</div> <!-- End of Name -->
+
+					<!-- Type -->
+					<div class="form-group">
+						<label class="col-lg-4 col-md-4 col-sm-5 col-xs-12 control-label text-left" for="representative">Тип соревнований:</label>
+						<div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
+							<select class="form-control" name="type" ng-model="data.type" type="text" required/>
+								<option value="детские">детские</option>
+								<option value="взрослые">взрослые</option>
+							</select>
+							<p class="error-block" ng-show="creationForm.type.$dirty && requestForm.representative.$error.required">Выберите тип</p>
+						</div>
+					</div> <!-- End of Type -->
+
+					<!-- Start date -->
+					<div class="form-group">
+						<label class="col-lg-4 col-md-4 col-sm-5 col-xs-12 control-label text-left" for="name">Дата начала соревнований:</label>
+						<div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
+							<input class="form-control" name="date_start" ng-model="data.date_start" type="date" placeholder="2016-01-01" required/>
+							<p class="error-block" ng-show="creationForm.date_start.$dirty && creationForm.date_start.$error.required">Введите дату начала соревнований</p>
+							<p class="error-block" ng-show="creationForm.date_start.$dirty && creationForm.date_start.$error.date">Введите дату в формате 2016-01-01</p>
+						</div>
+					</div> <!-- End of Start date -->
+
+					<!-- Finish date -->
+					<div class="form-group">
+						<label class="col-lg-4 col-md-4 col-sm-5 col-xs-12 control-label text-left" for="name">Дата окончания соревнований:</label>
+						<div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
+							<input class="form-control" name="date_finish" ng-model="data.date_finish" type="date" placeholder="2016-01-01" required/>
+							<p class="error-block" ng-show="creationForm.date_finish.$dirty && creationForm.date_finish.$error.required">Введите дату окончания</p>
+							<p class="error-block" ng-show="creationForm.date_finish.$dirty && creationForm.date_finish.$error.date">Введите дату в формате 2016-01-01</p>
+						</div>
+					</div> <!-- End of Finish date -->
+
+				</div>
+
+				<!-- Heading -->
+				<div class="heading">
+					<h2>Отметьте нужные возрастные группы, стили и дистанции</h2>
+				</div> <!-- End of Heading -->
+
+				<div class="row"> <!-- Row -->
+
+					<!-- Age groups -->
+					<div class="col-lg-4 col-md-4">
+
+						<h3>Возрастные группы</h3>
+
+						<div class="checkbox" ng-repeat="group in ageGroups">
+							<label>
+								<input type="checkbox" value="{$ group.id $}" ng-model="group.selected"> {$ group.name $}
+							</label>
+						</div>
+
+					</div> <!-- End of Age groups -->
+
+					<!-- Styles -->
+					<div class="col-lg-4 col-md-4">
+
+						<h3>Стили</h3>
+
+						<div class="checkbox" ng-repeat="style in styles">
+							<label>
+								<input type="checkbox" value="{$ style.id $}" ng-model="style.selected"> {$ style.name $}
+							</label>
+						</div>
+
+					</div> <!-- End of Styles -->
+
+					<!-- Distances -->
+					<div class="col-lg-4 col-md-4">
+
+						<h3>Дистанции</h3>
+
+						<div class="checkbox" ng-repeat="distance in distances">
+							<label>
+								<input type="checkbox" value="{$ distance.id $}" ng-model="distance.selected"> {$ distance.name $}
+							</label>
+						</div>
+
+					</div> <!-- End of Distances -->
+
+				</div> <!-- End of row -->
+
+				<!-- Heading -->
+				<div class="heading">
+					<h2>Выберите туры</h2>
+				</div> <!-- End of Heading -->
+
+			</div> <!-- End of container -->
 
 		</form> <!-- End of creationForm -->
 
 	</div> <!-- End of createCompetitionApp -->
 
+{% endblock %}
+
+{% block additionaljs %}
+
+	<script src="{% static 'js/create-competition-app.js' %}"></script> <!-- Competition reg App -->
 
 {% endblock %}
