--- a/pgups/templates/pgups/reg.html
+++ b/pgups/templates/pgups/reg.html
@@ -268,3 +268,9 @@
 	</div> <!-- End of validationApp -->
 
 {% endblock %}
+
+{% block additionaljs %}
+
+	<script src="{% static 'js/validation-app.js' %}"></script> <!-- Validation App -->
+
+{% endblock %}
