--- a/pgups/templates/pgups/base.html
+++ b/pgups/templates/pgups/base.html
@@ -51,8 +51,9 @@
 	<!-- Additional JS -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script> <!-- AngularJS -->
 	<script src="{% static 'js/notie.js' %}"></script> <!-- Notie -->
-	<script src="{% static 'js/validation-app.js' %}"></script> <!-- Validation App -->
-	<script src="{% static 'js/create-competition-app.js' %}"></script> <!-- Competition reg App -->
+
+	{% block additionaljs %}
+	{% endblock %}
 
 </body>
 </html>
