judequinn.angularjs fixed submit button, added minutes field to competitor form

--- a/pgups/static/css/main.css
+++ b/pgups/static/css/main.css
@@ -39,6 +39,9 @@ body {
 .basic-list-larger {
   font-size: 1.2rem;
 }
+.no-padding {
+  padding: 0;
+}
 .btn-xxl {
   padding: 16px 22px;
   font-size: 1.7em;
@@ -86,7 +89,8 @@ body {
 }
 .error-block {
   color: #5f021f;
-  margin: 5px 0;
+  position: relative;
+  top: 8px;
 }
 input.ng-invalid.ng-dirty,
 select.ng-invalid.ng-dirty {
