judequinn.angularjs multistep form w/ transition animation

--- a/pgups/static/css/main.css
+++ b/pgups/static/css/main.css
@@ -25,7 +25,7 @@ body {
 .heading {
   border-bottom: 1px solid #979a9d;
   padding-bottom: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 .heading-no-margin {
   margin-bottom: 0;
@@ -219,6 +219,22 @@ select.ng-invalid.ng-dirty {
 /*===============*/
 .creation-form {
   padding: 30px 0;
+}
+.animation-show-hide {
+  opacity: 1;
+}
+.animation-show-hide.ng-hide-remove.ng-hide-remove-active {
+  transition: all linear 0.5s;
+}
+.animation-show-hide.ng-hide {
+  opacity: 0;
+}
+.button-wrapper {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding-top: 50px;
+  overflow: hidden;
+  border-top: 1px solid #979a9d;
 }
 @-moz-keyframes greenish {
   0% {
