--- a/pgups/templates/pgups/competition_create.html
+++ b/pgups/templates/pgups/competition_create.html
@@ -24,108 +24,140 @@
 
 				{$ data $}
 
-				<!-- Heading -->
-				<div class="heading">
-					<h2>Общая информация</h2>
-				</div> <!-- End of Heading -->
+				<div ng-show="step === 1" class="animation-show-hide">
 
-				<div class="creation-form">
+					<!-- Heading -->
+					<div class="heading">
+						<h2>Общая информация о соревнованиях</h2>
+					</div> <!-- End of Heading -->
 
-					<!-- Name -->
-					<div class="form-group">
-						<label class="col-lg-4 col-md-4 col-sm-5 col-xs-12 control-label text-left" for="name">Название соревнований:</label>
-						<div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
-							<input class="form-control" name="name" ng-model="data.name" type="text" required/>
-							<p class="error-block" ng-show="creationForm.name.$dirty && creationForm.name.$error.required">Введите название</p>
-						</div>
-					</div> <!-- End of Name -->
+					<div class="creation-form">
 
-					<!-- Type -->
-					<div class="form-group">
-						<label class="col-lg-4 col-md-4 col-sm-5 col-xs-12 control-label text-left" for="representative">Тип соревнований:</label>
-						<div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
-							<select class="form-control" name="type" ng-model="data.type" type="text" required/>
-								<option value="детские">детские</option>
-								<option value="взрослые">взрослые</option>
-							</select>
-							<p class="error-block" ng-show="creationForm.type.$dirty && requestForm.representative.$error.required">Выберите тип</p>
-						</div>
-					</div> <!-- End of Type -->
+						<!-- Name -->
+						<div class="form-group">
+							<label class="col-lg-4 col-md-4 col-sm-5 col-xs-12 control-label text-left" for="name">Название соревнований:</label>
+							<div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
+								<input class="form-control" name="name" ng-model="data.name" type="text" required/>
+								<p class="error-block" ng-show="creationForm.name.$dirty && creationForm.name.$error.required">Введите название</p>
+							</div>
+						</div> <!-- End of Name -->
 
-					<!-- Start date -->
-					<div class="form-group">
-						<label class="col-lg-4 col-md-4 col-sm-5 col-xs-12 control-label text-left" for="name">Дата начала соревнований:</label>
-						<div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
-							<input class="form-control" name="date_start" ng-model="data.date_start" type="date" placeholder="2016-01-01" required/>
-							<p class="error-block" ng-show="creationForm.date_start.$dirty && creationForm.date_start.$error.required">Введите дату начала соревнований</p>
-							<p class="error-block" ng-show="creationForm.date_start.$dirty && creationForm.date_start.$error.date">Введите дату в формате 2016-01-01</p>
-						</div>
-					</div> <!-- End of Start date -->
+						<!-- Type -->
+						<div class="form-group">
+							<label class="col-lg-4 col-md-4 col-sm-5 col-xs-12 control-label text-left" for="representative">Тип соревнований:</label>
+							<div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
+								<select class="form-control" name="type" ng-model="data.type" type="text" required/>
+									<option value="0">детские</option>
+									<option value="1">взрослые</option>
+								</select>
+								<p class="error-block" ng-show="creationForm.type.$dirty && requestForm.representative.$error.required">Выберите тип</p>
+							</div>
+						</div> <!-- End of Type -->
 
-					<!-- Finish date -->
-					<div class="form-group">
-						<label class="col-lg-4 col-md-4 col-sm-5 col-xs-12 control-label text-left" for="name">Дата окончания соревнований:</label>
-						<div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
-							<input class="form-control" name="date_finish" ng-model="data.date_finish" type="date" placeholder="2016-01-01" required/>
-							<p class="error-block" ng-show="creationForm.date_finish.$dirty && creationForm.date_finish.$error.required">Введите дату окончания</p>
-							<p class="error-block" ng-show="creationForm.date_finish.$dirty && creationForm.date_finish.$error.date">Введите дату в формате 2016-01-01</p>
-						</div>
-					</div> <!-- End of Finish date -->
+						<!-- Start date -->
+						<div class="form-group">
+							<label class="col-lg-4 col-md-4 col-sm-5 col-xs-12 control-label text-left" for="name">Дата начала соревнований:</label>
+							<div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
+								<input class="form-control" name="date_start" ng-model="data.date_start" type="date" placeholder="2016-01-01" required/>
+								<p class="error-block" ng-show="creationForm.date_start.$dirty && creationForm.date_start.$error.required">Введите дату начала соревнований</p>
+								<p class="error-block" ng-show="creationForm.date_start.$dirty && creationForm.date_start.$error.date">Введите дату в формате 2016-01-01</p>
+							</div>
+						</div> <!-- End of Start date -->
+
+						<!-- Finish date -->
+						<div class="form-group">
+							<label class="col-lg-4 col-md-4 col-sm-5 col-xs-12 control-label text-left" for="name">Дата окончания соревнований:</label>
+							<div class="col-lg-5 col-md-5 col-sm-7 col-xs-12">
+								<input class="form-control" name="date_finish" ng-model="data.date_finish" type="date" placeholder="2016-01-01" required/>
+								<p class="error-block" ng-show="creationForm.date_finish.$dirty && creationForm.date_finish.$error.required">Введите дату окончания</p>
+								<p class="error-block" ng-show="creationForm.date_finish.$dirty && creationForm.date_finish.$error.date">Введите дату в формате 2016-01-01</p>
+							</div>
+						</div> <!-- End of Finish date -->
+
+					</div>
+
+					<div class="button-wrapper row">
+						<button class="btn btn-lg btn-success pull-right col-lg-2" ng-click="nextStep()" ng-disabled="false">Продолжить</button>
+					</div>
 
 				</div>
 
-				<!-- Heading -->
-				<div class="heading">
-					<h2>Отметьте нужные возрастные группы, стили и дистанции</h2>
-				</div> <!-- End of Heading -->
+				<div ng-show="step === 2" class="animation-show-hide">
 
-				<div class="row"> <!-- Row -->
+					<!-- Heading -->
+					<div class="heading">
+						<h2>Выберите возрастные группы, стили и дистанции</h2>
+					</div> <!-- End of Heading -->
 
-					<!-- Age groups -->
-					<div class="col-lg-4 col-md-4">
+					<div class="row"> <!-- Row -->
 
-						<h3>Возрастные группы</h3>
+						<!-- Age groups -->
+						<div class="col-lg-4 col-md-4">
 
-						<div class="checkbox" ng-repeat="group in ageGroups">
-							<label>
-								<input type="checkbox" value="{$ group.id $}" ng-model="group.selected"> {$ group.name $}
-							</label>
-						</div>
+							<h3>Возрастные группы</h3>
 
-					</div> <!-- End of Age groups -->
+							<div class="checkbox" ng-repeat="group in ageGroups">
+								<label>
+									<input type="checkbox" value="{$ group.id $}" ng-model="group.selected" ng-disabled="data.type == group.kids"> {$ group.name $}
+								</label>
+							</div>
 
-					<!-- Styles -->
-					<div class="col-lg-4 col-md-4">
+						</div> <!-- End of Age groups -->
 
-						<h3>Стили</h3>
+						<!-- Styles -->
+						<div class="col-lg-4 col-md-4">
 
-						<div class="checkbox" ng-repeat="style in styles">
-							<label>
-								<input type="checkbox" value="{$ style.id $}" ng-model="style.selected"> {$ style.name $}
-							</label>
-						</div>
+							<h3>Стили</h3>
 
-					</div> <!-- End of Styles -->
+							<div class="checkbox" ng-repeat="style in styles">
+								<label>
+									<input type="checkbox" value="{$ style.id $}" ng-model="style.selected"> {$ style.name $}
+								</label>
+							</div>
 
-					<!-- Distances -->
-					<div class="col-lg-4 col-md-4">
+						</div> <!-- End of Styles -->
 
-						<h3>Дистанции</h3>
+						<!-- Distances -->
+						<div class="col-lg-4 col-md-4">
 
-						<div class="checkbox" ng-repeat="distance in distances">
-							<label>
-								<input type="checkbox" value="{$ distance.id $}" ng-model="distance.selected"> {$ distance.name $}
-							</label>
-						</div>
+							<h3>Дистанции</h3>
 
-					</div> <!-- End of Distances -->
+							<div class="checkbox" ng-repeat="distance in distances">
+								<label>
+									<input type="checkbox" value="{$ distance.id $}" ng-model="distance.selected"> {$ distance.name $}
+								</label>
+							</div>
 
-				</div> <!-- End of row -->
+						</div> <!-- End of Distances -->
 
-				<!-- Heading -->
-				<div class="heading">
-					<h2>Выберите туры</h2>
-				</div> <!-- End of Heading -->
+					</div> <!-- End of row -->
+
+					<div class="button-wrapper row">
+						<button class="btn btn-lg btn-danger pull-left col-lg-2" ng-click="prevStep()">Вернуться</button>
+						<button class="btn btn-lg btn-success pull-right col-lg-2" ng-click="nextStep()">Продолжить</button>
+					</div>
+
+				</div>
+
+				<div ng-show="step === 3" class="animation-show-hide">
+
+					<!-- Heading -->
+					<div class="heading">
+						<h2>Выберите туры</h2>
+					</div> <!-- End of Heading -->
+
+					<div class="checkbox" ng-repeat="tour in tours">
+						<label>
+							<input type="checkbox" value="{$ tour.id $}" ng-model="tour.selected"> {$ tour.name $}
+						</label>
+					</div>
+
+					<div class="button-wrapper row">
+						<button class="btn btn-lg btn-danger pull-left col-lg-2" ng-click="prevStep()">Вернуться</button>
+						<button class="btn btn-lg btn-success pull-right col-lg-3" ng-click="submitForm()">Создать соревнования</button>
+					</div>
+
+				</div>
 
 			</div> <!-- End of container -->
 
@@ -137,6 +169,7 @@
 
 {% block additionaljs %}
 
+	<script src="https://code.angularjs.org/1.4.9/angular-animate.min.js"></script> <!-- Angular animations -->
 	<script src="{% static 'js/create-competition-app.js' %}"></script> <!-- Competition reg App -->
 
 {% endblock %}
