--- a/pgups/templates/pgups/person.html
+++ b/pgups/templates/pgups/person.html
@@ -4,7 +4,7 @@
 
 <div class="container">
 	<div class="heading">
-		<h1>{{person.first_name}} {{person.last_name}} ({{person.birth_year}})</h1>
+		<h1>{{person.first_name|title}} {{person.last_name|title}} ({{person.birth_year}})</h1>
 	</div>
 
 	<h2>Участие:</h2>
