judequinn.angularjs glyphicons!

--- a/pgups/templates/pgups/base.html
+++ b/pgups/templates/pgups/base.html
@@ -24,7 +24,7 @@
 		<div class="container">
 			<div id="navbar">
 				<ul class="nav navbar-nav">
-					<li><a href="{% url 'index' %}">Главная</a></li>
+					<li><a href="{% url 'index' %}"><span class="glyphicon glyphicon-home"></span> Главная</a></li>
 					<li><a href="{% url 'regrequest' %}">Подать заявку</a></li>
 				</ul>
 				<div class="login pull-right">
