judequinn.angularjs removed glyphicon font (already included in bootstrap.css), added tour grouping

--- a/pgups/static/css/main.css
+++ b/pgups/static/css/main.css
@@ -27,6 +27,9 @@ body {
   padding-bottom: 20px;
   margin-bottom: 40px;
 }
+.small-heading {
+  margin-bottom: 20px;
+}
 .heading-no-margin {
   margin-bottom: 0;
 }
