--- a/pgups/templates/pgups/competition_create.html
+++ b/pgups/templates/pgups/competition_create.html
@@ -26,7 +26,7 @@
 
 			<div class="container">
 
-				<!-- {$ data $} -->
+				 {$ data $}
 
 				<!-- Step 1 -->
 				<div ng-show="step === 1" class="animation-show-hide">
@@ -184,7 +184,7 @@
 							<span class="glyphicon glyphicon-chevron-left"></span> Вернуться
 						</button>
 
-						<button class="btn btn-lg btn-success pull-right col-lg-3" ng-click="nextStep(); submitForm(); groupTours(selectedTours())">
+						<button class="btn btn-lg btn-success pull-right col-lg-3" ng-click="nextStep(); groupTours(selectedTours())">
 							Продолжить <span class="glyphicon glyphicon-chevron-right"></span>
 						</button>
 
