--- a/pgups/templates/pgups/tour.html
+++ b/pgups/templates/pgups/tour.html
@@ -12,6 +12,10 @@
 		<div class="col-lg-6 col-md-6 col-sm-10 col-xs-12">
 			<table class="result-tour-table table table-striped table-hover table-bordered">
 				<tbody>
+				        <tr>
+                            <td>Участник</td>
+                            <td>Предварительное время (мин:сек)</td>
+                        </tr>
 					{% for pair in res %}
 						<tr>
 							<td class="result-tour-name">
