judequinn.angularjs disable button on submit, added jumbotron to index

--- a/pgups/templates/pgups/competition_create.html
+++ b/pgups/templates/pgups/competition_create.html
@@ -224,7 +224,7 @@
 							<span class="glyphicon glyphicon-chevron-left"></span> Вернуться
 						</button>
 
-						<button class="btn btn-lg btn-success pull-right col-lg-3" ng-click="submitForm()">
+						<button id="create-competition-button" class="btn btn-lg btn-success pull-right col-lg-3" ng-click="submitForm()">
 							Создать соревнования <span class="glyphicon glyphicon-ok"></span>
 						</button>
 
